homework/12.5/1-dep-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: main-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        appGeneral: nginx-or-multitool
    spec:
      containers:
        - name: webserver
          image: nginx:1.14.2
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          imagePullPolicy: IfNotPresent
