homework/12.5/2-dep-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: main-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
        appGeneral: nginx-or-multitool
    spec:
      containers:
        - name: multitool-web
          image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
