homework/12.5/3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-front-back-deploy
spec:
  type: NodePort
  selector:
    appGeneral: nginx-or-multitool
  ports:
    - name: web-netology-deploy
      port: 80
      nodePort: 30041
    - name: web-netology-multi
      port: 8080
      nodePort: 30042


---

apiVersion: v1
kind: Service
metadata:
  name: netology-svc-back-deploy
spec:
  selector:
    app: multitool
  ports:
    - name: web-netology-multi
      port: 80
      targetPort: 8080
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: netology-svc-front-deploy
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
