homework/12.5/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: my-app-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: netology-svc-front-deploy
                port:
                  number: 80

          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: netology-svc-back-deploy
                port:
                  number: 80
